Clases de contención para loggeeo + acomodamiento de métodos en todas las clases